abstract public class Mediator {

    abstract void registra(Colega colega);
    abstract void reenvia(Colega colega);

}
